Update: Migrated to Azure database

--- a/Talkie/Talkie.csproj
+++ b/Talkie/Talkie.csproj
@@ -29,7 +29,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Services\Account\" />
+    <Folder Include="Services\Contact\" />
+    <Folder Include="Services\Message\" />
+    <Folder Include="Services\Auth\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1production_1json__JsonSchema="https://json.schemastore.org/appsettings.json" /></VisualStudio></ProjectExtensions>
 
 </Project>
