--- a/Talkie/Properties/launchSettings.json
+++ b/Talkie/Properties/launchSettings.json
@@ -6,6 +6,11 @@
     "WSL": {
       "commandName": "WSL2",
       "distributionName": ""
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
